--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -43,12 +43,10 @@ issues:
         - goconst
         - lll
         - govet
-    - path: internal/security/totp.go
+        - gosimple
+    - path: internal/util/cache/cache.go
       linters:
-        - mnd
-    - path: internal/worker/notification/email.go
-      linters:
-        - gosec
+        - unparam
 run:
   timeout: 5m
   go: "1.23"
