--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -38,7 +38,7 @@ issues:
   exclude-rules:
     - path: _test\.go
       linters:
-        - gomnd
+        - mnd
         - dupl
         - goconst
         - lll
@@ -47,6 +47,9 @@ issues:
     - path: internal/util/cache/cache.go
       linters:
         - unparam
+    - path: internal/bootstrap.go
+      linters:
+        - mnd
 run:
   timeout: 5m
   go: "1.23"
