refactor some code

--- a/misc/config/.env.example
+++ b/misc/config/.env.example
@@ -1,5 +1,6 @@
 SERVER_NAME="AsttaX"
 SERVER_VERSION="0.0.1"
+SERVER_ENVIRONMENT="development" # development, staging, production
 
 # Replace this with your own TBOT token
 TELEGRAM_BOT_TOKEN=""
